deploy/03_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo2-java-kubernetes-deployment
  namespace: demo2-java-kubernetes
spec:
  #replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: demo2-java-kubernetes
      app.kubernetes.io/name: demo2-java-kubernetes
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: demo2-java-kubernetes
        app.kubernetes.io/name: demo2-java-kubernetes
    spec:
      containers:
      - name: demo2-java-kubernetes
        image: abenhlal/demo2-java-kubernetes:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
            httpHeaders:
          failureThreshold: 1
          initialDelaySeconds: 3
          periodSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
  minReadySeconds: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      #maxSurge: 1
