deploy/01_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo2-java-kubernetes-service
  namespace: demo2-java-kubernetes
spec:
  selector:
    app.kubernetes.io/instance: demo2-java-kubernetes
    app.kubernetes.io/name: demo2-java-kubernetes
  ports:
  - name: http-demo2-java-kubernetes
    protocol: TCP
    port: 80
    targetPort: 8000
